--- a/Persons-CRUD-List-Search/Views/Base.lproj/Main.storyboard
+++ b/Persons-CRUD-List-Search/Views/Base.lproj/Main.storyboard
@@ -13,15 +13,15 @@
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Persons_CRUD_List_Search" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
+                        <rect key="frame" x="0.0" y="0.0" width="390" height="790"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="O2V-3Z-2N6">
-                                <rect key="frame" x="0.0" y="88" width="390" height="51"/>
+                                <rect key="frame" x="0.0" y="0.0" width="390" height="51"/>
                                 <textInputTraits key="textInputTraits"/>
                             </searchBar>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="AR3-p8-5pr">
-                                <rect key="frame" x="0.0" y="139" width="390" height="671"/>
+                                <rect key="frame" x="0.0" y="51" width="390" height="705"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="personCell" id="iLO-Lq-Xcp" customClass="PersonCellTableViewCell" customModule="Persons_CRUD_List_Search" customModuleProvider="target">
@@ -85,7 +85,7 @@
             <objects>
                 <viewController id="MiK-X5-pkR" customClass="UpdateViewController" customModule="Persons_CRUD_List_Search" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Ypk-ET-IPd">
-                        <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
+                        <rect key="frame" x="0.0" y="0.0" width="390" height="790"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="line" placeholder="Person Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="V3h-KF-J9C">
@@ -109,6 +109,7 @@
                                 </buttonConfiguration>
                                 <connections>
                                     <action selector="didUpdateButtonTapped:" destination="MiK-X5-pkR" eventType="touchUpInside" id="88r-68-Uoy"/>
+                                    <segue destination="BYZ-38-t0r" kind="show" id="Xyn-ZX-Ni9"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -130,7 +131,7 @@
             <objects>
                 <viewController id="kEo-v1-w8B" customClass="DetailsViewController" customModule="Persons_CRUD_List_Search" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="i12-6y-tSF">
-                        <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
+                        <rect key="frame" x="0.0" y="0.0" width="390" height="790"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Person Name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="U7B-ri-uHz">
@@ -153,8 +154,8 @@
                     </view>
                     <navigationItem key="navigationItem" title="Person Detail" id="WlC-Fe-9B4"/>
                     <connections>
-                        <outlet property="detailPersonNameTextField" destination="U7B-ri-uHz" id="oRb-V2-UKb"/>
-                        <outlet property="detailPersonPhoneNumberTextField" destination="Sy1-7k-PNA" id="n4I-sn-Qbk"/>
+                        <outlet property="detailPersonNameLabel" destination="U7B-ri-uHz" id="oRb-V2-UKb"/>
+                        <outlet property="detailPersonPhoneNumberLabel" destination="Sy1-7k-PNA" id="n4I-sn-Qbk"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="EXD-aS-Zp8" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -166,7 +167,7 @@
             <objects>
                 <viewController id="eMW-wo-uTu" customClass="AddViewController" customModule="Persons_CRUD_List_Search" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="3VY-fd-QLc">
-                        <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
+                        <rect key="frame" x="0.0" y="0.0" width="390" height="790"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="line" placeholder="Person Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="MR1-pJ-uHE">
@@ -190,6 +191,7 @@
                                 </buttonConfiguration>
                                 <connections>
                                     <action selector="didAddPersonButtonTapped:" destination="eMW-wo-uTu" eventType="touchUpInside" id="J4c-ou-Z3l"/>
+                                    <segue destination="BYZ-38-t0r" kind="show" id="nYa-6M-EZC"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -225,6 +227,9 @@
             <point key="canvasLocation" x="44.615384615384613" y="69.66824644549763"/>
         </scene>
     </scenes>
+    <inferredMetricsTieBreakers>
+        <segue reference="Xyn-ZX-Ni9"/>
+    </inferredMetricsTieBreakers>
     <resources>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
